feat: improve endpoint handling

--- a/_includes/blocks/block-apidoc2.html
+++ b/_includes/blocks/block-apidoc2.html
@@ -103,7 +103,7 @@
     {% if endpoint == 'read' %}
     <div class="apidoc__gridrow">
         <div class="apidoc__gridcol">
-            <h3>Parameters</h3>
+            <h3>Path Parameters</h3>
             <div class="apidoc__object">
                 <div class="apidoc__object__name">
                     _id
@@ -162,7 +162,7 @@
     {% if endpoint == 'search' %}
     <div class="apidoc__gridrow">
         <div class="apidoc__gridcol">
-            <h3>Parameters</h3>
+            <h3>Query Parameters</h3>
             {% for parameter in block.parameters  %}
             <div class="apidoc__object">
                 <div class="apidoc__object__name">
