feat: algolia search

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,8 @@
         <span>Documentation</span>
     </a>
     <div class="navigation__search">
-      <input placeholder="Search" />
+      <!-- <input placeholder="Search" type="search" /> -->
+      <div id="search-searchbar"></div>
     </div>
   </div>
   <div class="navigation__container__inner navigation__container__site">
