--- a/_includes/blocks/block-apidoc.html
+++ b/_includes/blocks/block-apidoc.html
@@ -62,12 +62,16 @@
                         <div class="apidoc__object__description">
                             {{ attribute.description }}
                         </div>
+                        {% endfor %}
                     </div>
-                    {% endfor %}
+                    </div>
+                    {% endif %}
                 </div>
-                {% endif %}
+            
             </div>
             {% endfor %}
+
+            
             {% endif %}
         </div>
         <div class="apidoc__gridcol">
