--- a/_includes/blocks/block-apidoc.html
+++ b/_includes/blocks/block-apidoc.html
@@ -22,10 +22,11 @@
                 <div class="apidoc__endpoint__list">
                     {% for endpoint in block.endpoints %}
                     {% include blocks/block-apidoc-endpoints.html %}
-                        <a href="#{{ endpoint }}" class="apidoc__endpoint__list__item">
-                            <span class="apidoc__endpoint__method apidoc__endpoint__method__{{ method }}">{{ method }}</span>
-                            <div class="apidoc__endpoint__url">/{{ block.name }}{{ url }}</div>
-                        </a>
+                    <a href="#{{ endpoint }}" class="apidoc__endpoint__list__item">
+                        <span class="apidoc__endpoint__method apidoc__endpoint__method__{{ method }}">{{ method
+                            }}</span>
+                        <div class="apidoc__endpoint__url">/{{ block.name }}{{ url }}</div>
+                    </a>
                     {% endfor %}
                 </div>
             </div>
@@ -42,7 +43,8 @@
                     {{ attribute.name }}
                 </div>
                 <div class="apidoc__object__type">
-                    {{ attribute.type }} {% if attribute.required %}<span class="apidoc__object__required">required</span>{% endif %}
+                    {{ attribute.type }} {% if attribute.required %}<span
+                        class="apidoc__object__required">required</span>{% endif %}
                 </div>
                 {% if attribute.description %}
                 <div class="apidoc__object__description">
@@ -75,14 +77,14 @@
             {% assign randomId = "now" | date: "%N" | modulo: 10000 %}
             <div id="payload-{{ randomId }}"></div>
             <script>
-            window.addEventListener('DOMContentLoaded', () => {
-                const codeSource = document.querySelector('#{{ block.example_payload }}');
-                const exampleCode = codeSource.cloneNode(true);
-                exampleCode.id = '';
-                codeSource.classList.add('apidoc__hidden');
-                const randomId = document.querySelector('#payload-{{ randomId }}');
-                randomId.appendChild(exampleCode);
-            });
+                window.addEventListener('DOMContentLoaded', () => {
+                    const codeSource = document.querySelector('#{{ block.example_payload }}');
+                    const exampleCode = codeSource.cloneNode(true);
+                    exampleCode.id = '';
+                    codeSource.classList.add('apidoc__hidden');
+                    const randomId = document.querySelector('#payload-{{ randomId }}');
+                    randomId.appendChild(exampleCode);
+                });
             </script>
             {% endif %}
         </div>
@@ -172,7 +174,7 @@
     <div class="apidoc__gridrow">
         <div class="apidoc__gridcol">
             <h3>Query Parameters</h3>
-            {% for parameter in block.search_parameters  %}
+            {% for parameter in block.search_parameters %}
             <div class="apidoc__object">
                 <div class="apidoc__object__name">
                     {{ parameter.name }}
@@ -245,7 +247,8 @@
                     {{ attribute.name }}
                 </div>
                 <div class="apidoc__object__type">
-                    {{ attribute.type }} {% if attribute.required %}<span class="apidoc__object__required">required</span>{% endif
+                    {{ attribute.type }} {% if attribute.required %}<span
+                        class="apidoc__object__required">required</span>{% endif
                     %}
                 </div>
                 {% if attribute.description %}
@@ -295,7 +298,7 @@
         <div class="apidoc__gridcol">
             <h3>Responses</h3>
             {% for response in block.create.responses %}
-            {% include blocks/block-apidoc-responses-ok.html %}
+            {% include blocks/block-apidoc-responses-created.html %}
             {% endfor %}
             <h3>Errors</h3>
             {% for response in block.create.responses %}
@@ -331,7 +334,8 @@
                     {{ attribute.name }}
                 </div>
                 <div class="apidoc__object__type">
-                    {{ attribute.type }} {% if attribute.required %}<span class="apidoc__object__required">required</span>{% endif
+                    {{ attribute.type }} {% if attribute.required %}<span
+                        class="apidoc__object__required">required</span>{% endif
                     %}
                 </div>
                 {% if attribute.description %}
