Add 404 to Error html

--- a/_includes/blocks/block-apidoc-responses-errors.html
+++ b/_includes/blocks/block-apidoc-responses-errors.html
@@ -17,4 +17,13 @@
         Some response description
     </div>
 </div>
+{% if response == 404 %}
+<div class="apidoc__object">
+    <div class="apidoc__object__name">
+        404 Not Found
+    </div>
+    <div class="apidoc__object__description">
+        Some response description
+    </div>
+</div>
 {% endif %}
