Add created and descriptions

--- a/_includes/blocks/block-apidoc-responses-ok.html
+++ b/_includes/blocks/block-apidoc-responses-ok.html
@@ -4,7 +4,17 @@
         200 OK
     </div>
     <div class="apidoc__object__description">
-        Some response description
+        The request was successful.
+    </div>
+</div>
+{% endif %}
+{% if response == 201 %}
+<div class="apidoc__object">
+    <div class="apidoc__object__name">
+        201 Created
+    </div>
+    <div class="apidoc__object__description">
+        The request was successful and a resource was created.
     </div>
 </div>
 {% endif %}
