--- a/_includes/blocks/block-apidoc-responses-errors.html
+++ b/_includes/blocks/block-apidoc-responses-errors.html
@@ -18,3 +18,13 @@
     </div>
 </div>
 {% endif %}
+{% if response == 404 %}
+<div class="apidoc__object">
+    <div class="apidoc__object__name">
+        404 Not Found
+    </div>
+    <div class="apidoc__object__description">
+        Some response description
+    </div>
+</div>
+{% endif %}
