--- a/_includes/blocks/block-apidoc-responses-errors.html
+++ b/_includes/blocks/block-apidoc-responses-errors.html
@@ -1,7 +1,7 @@
 {% if response == 400 %}
 <div class="apidoc__object">
     <div class="apidoc__object__name">
-        400 Failure
+        400 Bad Request
     </div>
     <div class="apidoc__object__description">
         The request was invalid or cannot be otherwise served. An accompanying error message will explain further.
