--- a/_includes/blocks/block-apidoc.html
+++ b/_includes/blocks/block-apidoc.html
@@ -51,7 +51,7 @@
                 {% endif %}
                 {% if attribute.attributes %}
                 <div class="apidoc__object__children">
-                    {% for attribute in block.attributes %}
+                    {% for attribute in attribute.attributes %}
                     <div class="apidoc__object">
                         <div class="apidoc__object__name">
                             {{ attribute.name }}
@@ -255,7 +255,7 @@
                 {% endif %}
                 {% if attribute.attributes %}
                 <div class="apidoc__object__children">
-                    {% for attribute in block.attributes %}
+                    {% for attribute in attribute.attributes %}
                     <div class="apidoc__object">
                         <div class="apidoc__object__name">
                             {{ attribute.name }}
@@ -341,7 +341,7 @@
                 {% endif %}
                 {% if attribute.attributes %}
                 <div class="apidoc__object__children">
-                    {% for attribute in block.attributes %}
+                    {% for attribute in attribute.attributes %}
                     <div class="apidoc__object">
                         <div class="apidoc__object__name">
                             {{ attribute.name }}
