--- a/_scss/_pagelayout.scss
+++ b/_scss/_pagelayout.scss
@@ -65,7 +65,7 @@
       }
 
       &__wrapper {
-        max-width: 250px + 800px + $container-padding;
+        max-width: 100%;
         margin-left: auto;
         margin-right: auto;
       }
