feat: remove borders around attributes

--- a/_scss/_apidoc.scss
+++ b/_scss/_apidoc.scss
@@ -86,7 +86,7 @@
   }
 
   &__object {
-    border: 2px solid $lightgrey;
+    border-bottom: 2px solid $lightgrey;
     border-radius: 0.6rem;
     margin-bottom: 1rem;
     padding: 0.5em;
