--- a/_scss/_default.scss
+++ b/_scss/_default.scss
@@ -80,5 +80,12 @@ table {
     padding: 0.5em;
     margin: 0.25em;
     border-bottom: 1px solid rgba($black,0.5);
+    border-right: 1px solid rgba($black, 0.5);
+  }
+  th:last-of-type, td:last-of-type {
+    border-right: 0px;
+  }
+  tr:last-of-type > td {
+    border-bottom: 0px;
   }
 }
