--- a/_scss/_toc.scss
+++ b/_scss/_toc.scss
@@ -5,9 +5,30 @@
     padding-left: 0;
     list-style-type: none;
     margin: 0;
-    > .toc__item > a {
+    > .toc__item > div > a {
       font-weight: 600;
       color: $text-color;
+    }
+  }
+
+  &__toggle {
+    cursor: pointer;
+    display: inline;
+    svg {
+      height: 0.8em;
+      width: auto;
+    }
+    &__expanded > svg {
+      transform: rotate(270deg);
+    }
+  }
+
+  &__accordion {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.1s ease-in-out;
+    &__expanded {
+      max-height: 1000px;
     }
   }
 
@@ -29,6 +50,9 @@
     }
   }
 
+  ul {
+    padding-left: 0.5em;
+  }
 
 
 }
