--- a/_includes/blocks/block-apidoc-attributes.html
+++ b/_includes/blocks/block-apidoc-attributes.html
@@ -9,7 +9,7 @@
     </div>
     {% if attribute.description %}
     <div class="apidoc__object__description">
-        {{ attribute.description }}
+        {{ attribute.description | markdownify }}
     </div>
     {% endif %}
     {% if attribute.attributes %}
@@ -25,7 +25,7 @@
                     {{ attribute.type }}
                 </div>
                 <div class="apidoc__object__description">
-                    {{ attribute.description }}
+                    {{ attribute.description | markdownify }}
                 </div>
             </div>
             {% endfor %}
