feat: refactor css fix header height

--- a/_includes/search-container.html
+++ b/_includes/search-container.html
@@ -1,7 +1,6 @@
 <div class="search-panel pagelayout pagelayout__centerdocs" id="search_container">
   <div class="sidenav">
-    <ul class="mt-2" id="refinementlist">
-    </ul>
+    <div id="refinementlist"></div>
   </div>
 
   <div class="search-panel__results">
