--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -4,6 +4,7 @@
 // stylesheets
 @import 'default';
 @import 'alert';
+@import 'algolia';
 @import 'anchorlist';
 @import 'apidoc';
 @import 'article';
@@ -15,7 +16,6 @@
 @import 'jekylltabs';
 @import 'navigation';
 @import 'pagelayout';
-@import 'panel';
 @import 'rogue';
 @import 'sidenav';
 @import 'sidepanels';
