feat: fix arrow on toc

--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -5,16 +5,16 @@
     <ul class="toc__menu">
       <li class="toc__item">
         <div>
+          {% if item.children %}<span class="toc__toggle toc__toggle__expanded">{% include icons/chevron.svg %}</span>{% endif %}
           <a href="{{ item.url }}">{{ item.title }}</a>
-          {% if item.children %}<span class="toc__toggle">{% include icons/chevron.svg %}</span>{% endif %}
         </div>
         {% if item.children %}
         <ul class="toc__submenu toc__accordion toc__accordion__expanded">
           {% for item in item.children %}
           <li class="toc__item">
             <div>
-              <a href="{{ item.url }}">{{ item.title }}</a>
               {% if item.children %}<span class="toc__toggle">{% include icons/chevron.svg %}</span>{% endif %}
+              <a href="{{ item.url }}">{{ item.title }}</a>
             </div>
             {% if item.children %}
             <ul class="toc__submenu toc__accordion">
