--- a/_scss/_toc.scss
+++ b/_scss/_toc.scss
@@ -19,8 +19,11 @@
       height: 0.8em;
       width: auto;
     }
-    &__expanded > svg {
+    > svg {
       transform: rotate(270deg);
+    }
+    &__expanded > svg {
+      transform: rotate(0deg);
     }
   }
 
