--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -13,11 +13,13 @@
           {% for item in item.children %}
           <li class="toc__item">
             <div>
-              {% if item.children %}<span class="toc__toggle">{% include icons/chevron.svg %}</span>{% endif %}
+              {% if item.children %}<span class="toc__toggle{% if item.children %}{% for item in item.children %}{% if item.url == page.url %} toc__toggle__expanded
+              {% endif %}{% endfor %}{% endif %}">{% include icons/chevron.svg %}</span>{% endif %}
               <a href="{{ item.url }}">{{ item.title }}</a>
             </div>
             {% if item.children %}
-            <ul class="toc__submenu toc__accordion">
+            <ul class="toc__submenu toc__accordion{% if item.children %}{% for item in item.children %}{% if item.url == page.url %} toc__accordion__expanded
+              {% endif %}{% endfor %}{% endif %}">
               {% for item in item.children %}
               <li class="toc__item">
                 <div>
