--- a/_scss/_apidoc.scss
+++ b/_scss/_apidoc.scss
@@ -1,8 +1,10 @@
 .apidoc {
   &__gridrow {
-    display: grid;
-    grid-template-columns: 550px 550px;
-    grid-column-gap: $container-padding;
+    @media (min-width: $breakpoint-xxl) {
+      display: grid;
+      grid-template-columns: 550px 550px;
+      grid-column-gap: $container-padding;
+    }
     padding: 0 $container-padding; 
   }
 
