--- a/_scss/_pagelayout.scss
+++ b/_scss/_pagelayout.scss
@@ -39,7 +39,7 @@
       margin-left: auto;
       margin-right: auto;
       display: grid;
-      grid-template-columns: 800px 250px;
+      grid-template-columns: minmax(2fr, 800px) minmax(1fr, 250px);
       grid-column-gap: $container-padding;
     }
 
