--- a/_includes/blocks/block-apidoc.html
+++ b/_includes/blocks/block-apidoc.html
@@ -49,7 +49,7 @@
         <div class="apidoc__gridcol">
             {% if block.attributes %}
             <h3>Attributes</h3>
-            {% include blocks/block-apidoc-attributes.html %}
+            {% include blocks/block-apidoc-attributes.html context='overview' %}
             {% endif %}
         </div>
         <div class="apidoc__gridcol">
@@ -221,7 +221,7 @@
         <div class="apidoc__gridcol">
             {% if block.attributes %}
             <h3>Attributes</h3>
-            {% include blocks/block-apidoc-attributes.html %}
+            {% include blocks/block-apidoc-attributes.html context='create' %}
             {% endif %}
         </div>
         <div class="apidoc__gridcol">
@@ -277,7 +277,7 @@
         <div class="apidoc__gridcol">
             {% if block.attributes %}
             <h3>Attributes</h3>
-            {% include blocks/block-apidoc-attributes.html %}
+            {% include blocks/block-apidoc-attributes.html context='update' %}
             {% endif %}
         </div>
         <div class="apidoc__gridcol">
