appointment api git status

--- a/_includes/blocks/block-apidoc-responses-created.html
+++ b/_includes/blocks/block-apidoc-responses-created.html
@@ -4,7 +4,7 @@
     201 Created
   </div>
   <div class="apidoc__object__description">
-    Some response description
+    The server has successfully processed the request, the new resource has been created and is now ready for interaction.
   </div>
 </div>
 {% endif %}
