--- a/_scss/_apidoc.scss
+++ b/_scss/_apidoc.scss
@@ -92,8 +92,8 @@
     margin-bottom: 1rem;
     padding: 0.5em;
     display: flex;
-    flex-direction: column;
-    gap: 0.25em;
+    flex-wrap: wrap;
+    gap: 0.5em;
 
     header {
       display: flex;
@@ -118,8 +118,12 @@
       font-family: $mono-font-family;
     }
 
-    &___description {
-      margin-bottom: 0;
+    &__description {
+      margin: 0;
+      flex-basis: 100%;
+      > p:first-of-type {
+        margin-top: 0;
+      }
     }
 
     &__children {
