--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -6,7 +6,7 @@
       <li class="toc__item">
         <div>
           {% if item.children %}<span class="toc__toggle toc__toggle__expanded">{% include icons/chevron.svg %}</span>{% endif %}
-          <a href="{{ item.url }}">{{ item.title }}</a>
+          {% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %}<strong>{{ item.title }}</strong>{% endif %}
         </div>
         {% if item.children %}
         <ul class="toc__submenu toc__accordion toc__accordion__expanded">
@@ -14,21 +14,21 @@
           <li class="toc__item">
             <div>
               {% if item.children %}<span class="toc__toggle{% if item.children %}{% for item in item.children %}{% assign this_url = item.url | split: '#' %}{% if this_url[0] == page.url %} toc__toggle__expanded{% endif %}{% endfor %}{% endif %}">{% include icons/chevron.svg %}</span>{% endif %}
-              <a href="{{ item.url }}">{{ item.title }}</a>
+              {% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %}<strong>{{ item.title }}</strong>{% endif %}
             </div>
             {% if item.children %}
             <ul class="toc__submenu toc__accordion{% if item.children %}{% for item in item.children %}{% assign this_url = item.url | split: '#' %}{% if this_url[0] == page.url %} toc__accordion__expanded{% endif %}{% endfor %}{% endif %}">
               {% for item in item.children %}
               <li class="toc__item">
                 <div>
-                  <a href="{{ item.url }}">{{ item.title }}</a>
+                  {% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %}<strong>{{ item.title }}</strong>{% endif %}
                 </div>
                 {% if item.children %}
                 <ul class="toc__submenu">
                   {% for item in item.children %}
                   <li class="toc__item">
                     <div>
-                      <a href="{{ item.url }}">{{ item.title }}</a>
+                      {% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %}<strong>{{ item.title }}</strong>{% endif %}
                     </div>
                   </li>
                   {% endfor %}
