feat: search opens in modal window

--- a/_includes/search-container.html
+++ b/_includes/search-container.html
@@ -1,10 +1,15 @@
-<div class="search-panel pagelayout pagelayout__centerdocs" id="search_container">
-  <div class="sidenav">
-    <div id="refinementlist"></div>
+<div class="searchmain">
+  <div id="algolia-search" class="navigation__search">
   </div>
+  <div class="search-panel pagelayout pagelayout__centerdocs" id="search_container">
+    <div class="sidenav">
+      <div id="refinementlist"></div>
+    </div>
 
-  <div class="search-panel__results">
-    <div id="algolia-results" class="navigation__search"></div>
-    <div id="pagination"></div>
+    <div class="search-panel__results">
+      <div id="algolia-results" class="navigation__search"></div>
+      <div id="pagination"></div>
+    </div>
   </div>
 </div>
+<div id="search-overlay"></div>
