--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -84,7 +84,7 @@
     input {
       padding: 8px 0 6px 2em;
       width: 100%;
-      border: 0px solid transparent;
+      border: 1px solid #dcdcdc;
       outline: 0px solid transparent;
       &::placeholder {
         opacity: 1;
