--- a/_scss/_algolia.scss
+++ b/_scss/_algolia.scss
@@ -1,8 +1,9 @@
-.searchmain{
+.searchmain {
   display: none;
 }
-.toogle_searchmain{
-  display: block;  
+
+.toogle_searchmain {
+  display: block;
   position: absolute;
   width: 70vw;
   max-height: 70vh;
@@ -12,11 +13,12 @@
   left: 0px;
   right: 0px;
   background: rgb(255, 255, 255);
-  box-shadow: 0 10px 38px -10px rgba(14,18,22,.35), 0 10px 20px -15px rgba(14,18,22,.2);
+  box-shadow: 0 10px 38px -10px rgba(14, 18, 22, .35), 0 10px 20px -15px rgba(14, 18, 22, .2);
   border-radius: 10px;
-  top:0px;
+  top: 0px;
   bottom: 0px;
   z-index: 999;
+
   @media (max-width: $breakpoint-md) {
     width: 90vw;
     max-height: 70vh;
@@ -24,57 +26,64 @@
     min-height: 25vh;
 
   }
-  
+
 }
+
 #search_container {
   display: none;
   width: 100%;
-  grid-template-columns: 30%  68%;
+  grid-template-columns: 30% 68%;
+
   @media (max-width: $breakpoint-md) {
     overflow-x: hidden;
-  grid-column-start: 1;
+    grid-column-start: 1;
     grid-column-end: 2;
     grid-template-rows: auto;
-    grid-template-areas: 
+    grid-template-areas:
       "sidebar sidebar"
       "result result";
   }
- 
+
 }
 
-#search-overlay{
+#search-overlay {
   position: fixed;
   inset: 0;
-  // animation: markprompt-fade-in .15s cubic-bezier(.16,1,.3,1);
-  background-color: rgba(0 ,0, 0 , 20%);
+  background-color: rgba(0, 0, 0, 20%);
   width: 100vw;
   height: 100vh;
   content: "";
   z-index: 998;
   display: none;
- &.search-overlay__toggle{
-  display: block;
-}
+
+  &.search-overlay__toggle {
+    display: block;
+  }
 }
 
 
 .ais-RefinementList {
   &-list {
     list-style: none;
-    // line-height: 1.8rem;
     padding: 0px;
     margin-top: 0px;
+
     @media (max-width: $breakpoint-md) {
       display: grid;
-      grid-template-columns:auto auto auto;
+      grid-template-columns: auto auto auto;
       gap: 10px;
     }
-    .ais-RefinementList-label{font-size: 13px;}
+
+    .ais-RefinementList-label {
+      font-size: 13px;
+    }
+
     input {
       margin-right: 5px;
     }
   }
-  &-label{
+
+  &-label {
     display: flex;
     align-items: center;
   }
@@ -130,8 +139,9 @@
   &-list {
     display: flex;
     align-items: center;
-    margin:0px;
+    margin: 0px;
     padding: 0px;
+
     li {
       list-style: none;
       display: inline-block;
@@ -159,11 +169,12 @@
     place-items: center;
     text-decoration: none;
     margin-left: -1px;
+
     @media (max-width: $breakpoint-md) {
       padding: 0 calc(1rem - 1.5vw);
 
     }
-    
+
   }
 
   &-item {
@@ -185,7 +196,6 @@
 
 #algolia-results {
   display: block;
-  // min-height: calc( var(--body-height) - 150px );
   max-height: calc(60vh - 95px);
   overflow-y: auto;
   padding-right: 15px;
@@ -202,52 +212,59 @@
   &::-webkit-scrollbar-thumb {
     background: #000;
     border-radius: 6px;
-  }  
+  }
 
   @media (max-width: $breakpoint-md) {
     max-height: calc(53vh - 95px);
-        
-    }
+
+  }
 }
 
 .ais-SearchBox-reset {
   display: none;
 }
-.search-panel__results{
-  padding-top:10px;
+
+.search-panel__results {
+  padding-top: 10px;
+
   @media (max-width: $breakpoint-md) {
-      grid-area: result;
-      margin-top: 12vh;
-      padding-top:0px;
-    }
-}
-#algolia-search{
-  max-width: 80vw;
-  margin: 0.5vw 1vw;
-  @media (max-width: $breakpoint-md) {
-  max-width: 97vw;
-      
+    grid-area: result;
+    margin-top: 12vh;
+    padding-top: 0px;
   }
 }
-.ais-Hits-list{
+
+#algolia-search {
+  max-width: 80vw;
+  margin: 0.5vw 1vw;
+
+  @media (max-width: $breakpoint-md) {
+    max-width: 97vw;
+
+  }
+}
+
+.ais-Hits-list {
   list-style: none;
   padding: 0px;
   margin: 0px;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  li
-  {
+
+  li {
     box-shadow: 0 0 2px #94a3b8;
     border-radius: 0.5rem;
     padding: 10px;
-    a{
+
+    a {
       color: #343434;
       font-size: 13px;
       text-decoration: none;
     }
-    .post-snippet{      
-      p{
+
+    .post-snippet {
+      p {
         display: -webkit-box;
         max-width: 100%;
         max-height: 41px;
@@ -257,7 +274,7 @@
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;
         overflow: hidden;
-        text-overflow: ellipsis;  
+        text-overflow: ellipsis;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
@@ -265,11 +282,16 @@
         color: #737373;
       }
     }
-    &:hover{
-      background:  $mediumblue;
-      a{
+
+    &:hover {
+      background: $mediumblue;
+
+      a {
         color: #fff;
-        p{color: $white;}
+
+        p {
+          color: $white;
+        }
       }
     }
   }
