feat: improve sub-menu handling

--- a/_layouts/api.html
+++ b/_layouts/api.html
@@ -2,10 +2,8 @@
 layout: default
 ---
 <div class="pagelayout pagelayout__largedocs">
-  <div class="sidenav sidenav__open">
-    <div class="sidenav__toggle">
-      {% include icons/horizontal-toggle.svg %}
-    </div>
+  <div class="sidenav sidenav__open sidenavtoc">
+   
     {% include toc.html menu=site.menus.api %}
   </div>
   <div class="pagelayout__largedocs__wrapper">
