--- a/_layouts/guides.html
+++ b/_layouts/guides.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 <div class="pagelayout pagelayout__centerdocs">
-  <div class="sidenav">
-    <div class="sidenav__toggle">
+  <div class="sidenav sidenavtoc">
+    <!-- <div class="sidenav__toggle">
       {% include icons/horizontal-toggle.svg %}
-    </div>
+    </div> -->
     {% include toc.html menu=site.menus.guides %}
   </div>
   <div class="pagelayout__centerdocs__wrapper">
