--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -123,7 +123,7 @@
       position: absolute;
       font-size: 1.5rem;
       top: 0.75rem;
-      right: 1rem;
+      left: 1rem;
       display: block;
       cursor: pointer;
       &__expanded {
