--- a/_scss/_sidenav.scss
+++ b/_scss/_sidenav.scss
@@ -7,8 +7,12 @@
   position: relative;
 
   &__toggle {
-    @media (min-width: $breakpoint-lg) {
-      display: none;
+    display: none;    
+    @media (max-width: $breakpoint-sm) {
+      display: block;
+      position: absolute;
+      left: 5vw;
+      top: 60px;
     }
 
     position: sticky;
@@ -22,15 +26,48 @@
       fill: $navyblue;
     }
   }
-
-  @media (max-width: $breakpoint-lg) {
+ 
+  @media (max-width: $breakpoint-sm) {
+    &.sidenavtoc{
+      min-width: 0px;
+      border-right: 0px solid $babyblue;
+      width: calc(100vw - 28px);
+    }
     &__collapsed {
-      width: 1rem;
+      width: 0rem !important ;
       overflow: hidden;
+      padding: 0px;
+
 
       nav {
         visibility: hidden;
       }
     }
   }
+}
+.navsidetogle{visibility: hidden;}
+
+@media (max-width: $breakpoint-sm) {
+.navsidetogle{
+  // display:block;
+  // visibility: visible;
+  .sidenav__toggle__open {
+    display: none;
+  }
+  .sidenav__toggle__close {
+    display: block;
+  }
+  &.open{    
+      .sidenav__toggle__open {
+        display: block;
+      }
+      .sidenav__toggle__close {
+        display: none;
+      }
+    
+  }
+}
+}
+.overflowhiddenX{
+  overflow-x: hidden;
 }
