--- a/_scss/_algolia.scss
+++ b/_scss/_algolia.scss
@@ -49,7 +49,7 @@
 #search-overlay {
   position: fixed;
   inset: 0;
-  background-color: rgba(0, 0, 0, 20%);
+  background-color: rgba(0, 0, 0, 0.75);
   width: 100vw;
   height: 100vh;
   content: "";
