fix: markdownify to search description

--- a/_includes/blocks/block-apidoc.html
+++ b/_includes/blocks/block-apidoc.html
@@ -163,7 +163,7 @@
                     {{ parameter.type }}
                 </div>
                 <div class="apidoc__object__description">
-                    {{ parameter.description }}
+                    {{ parameter.description | markdownify }}
                 </div>
             </div>
             {% endfor %}
