--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -10,6 +10,7 @@
 @import 'article';
 @import 'button';
 @import 'cardnav';
+@import 'cardsection';
 @import 'filterdate';
 @import 'filtertag';
 @import 'footer';
