--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,39 +1,37 @@
 <nav class="navigation navigation__container" role="navigation">
-  <div class="navigation__toggle navigation__toggle__collapsed">
-    <div class="navigation__toggle__open">
-      <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><path d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg> 
+    <div class="navigation__toggle navigation__toggle__collapsed">
+        <div class="navigation__toggle__open">
+            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><path d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg>
+        </div>
+        <div class="navigation__toggle__close">
+            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+        </div>
     </div>
-    <div class="navigation__toggle__close">
-      <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+    <div class="navigation__container__inner navigation__container__global">
+        <a class="navigation__logo" href="{{ '/' | relative_url }}">
+            <img src="{{ '/assets/images/logo.svg' | relative_url }}" class="navigation__logo-img" alt="{{ site.title | escape }}">
+        </a>
+        <button class="btn btn__search search__toggle"><svg class="ais-SearchBox-submitIcon" width="16" height="16" viewBox="0 0 40 40" aria-hidden="true"><path d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"></path></svg> Search anything...</button>
+
     </div>
-  </div>
-  <div class="navigation__container__inner navigation__container__global">
-    <a class="navigation__logo" href="{{ "/" | relative_url }}">
-      <img src="{{ "/assets/images/logo.svg" | relative_url }}" class="navigation__logo-img"
-        alt="{{ site.title | escape }}">
-    </a>
-    <button class="btn btn__search search__toggle"><svg class="ais-SearchBox-submitIcon" width="16" height="16" viewBox="0 0 40 40" aria-hidden="true"><path d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"></path></svg> Search</button>
-    
-  </div>
- 
-  <div class="sidenav__toggle navsidetogle">
-    <div class="sidenav__toggle__open">
-      <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><path d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg> 
+
+    <div class="sidenav__toggle navsidetogle">
+        <div class="sidenav__toggle__open">
+            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><path d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg>
+        </div>
+        <div class="sidenav__toggle__close">
+            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+        </div>
     </div>
-    <div class="sidenav__toggle__close">
-      <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+    <div class="navigation__container__inner navigation__container__site navigation__wrapper">
+        <div class="navigation__menu">
+            {% for item in site.menus.main %}
+            <a class="navigation__menu__item{% if page.url == '/' %}{% if item.url == '/' %} navigation__menu__item__active{% endif %}{% elsif item.url contains page.url %} navigation__menu__item__active{% endif %}" href="{{ item.url }}">{{ item.title }}</a>            {% endfor %}
+        </div>
+        <div class="navigation__alt">
+            <a class="navigation__menu__item" href="https://www.canvasmedical.com/" target="_blank">Canvas Medical Website</a>
+        </div>
     </div>
-  </div>
-  <div class="navigation__container__inner navigation__container__site navigation__wrapper">
-    <div class="navigation__menu">
-      {% for item in site.menus.main %}
-        <a class="navigation__menu__item{% if page.url == '/' %}{% if item.url == '/' %} navigation__menu__item__active{% endif %}{% elsif item.url contains page.url %} navigation__menu__item__active{% endif %}" href="{{ item.url }}">{{ item.title }}</a>
-      {% endfor %}
-    </div>
-    <div class="navigation__alt">
-      <a class="navigation__menu__item" href="https://www.canvasmedical.com/" target="_blank">Canvas Medical Website</a>
-    </div>
-  </div>
 </nav>
 
-{% include search-container.html %} 
+{% include search-container.html %}
