--- a/_scss/_algolia.scss
+++ b/_scss/_algolia.scss
@@ -1,298 +1,272 @@
 .searchmain {
-  display: none;
+    display: none;
 }
 
 .toogle_searchmain {
-  display: block;
-  position: absolute;
-  width: 70vw;
-  max-height: 70vh;
-  height: fit-content;
-  min-height: 25vh;
-  margin: auto;
-  left: 0px;
-  right: 0px;
-  background: rgb(255, 255, 255);
-  box-shadow: 0 10px 38px -10px rgba(14, 18, 22, .35), 0 10px 20px -15px rgba(14, 18, 22, .2);
-  border-radius: 10px;
-  top: 0px;
-  bottom: 0px;
-  z-index: 999;
-
-  @media (max-width: $breakpoint-md) {
-    width: 90vw;
+    display: block;
+    position: absolute;
+    width: 70vw;
     max-height: 70vh;
     height: fit-content;
     min-height: 25vh;
-
-  }
-
+    margin: auto;
+    left: 0px;
+    right: 0px;
+    background: rgb(255, 255, 255);
+    box-shadow: 0 10px 38px -10px rgba(14, 18, 22, .35), 0 10px 20px -15px rgba(14, 18, 22, .2);
+    border-radius: 10px;
+    top: 150px;
+    z-index: 999;
+    @media (max-width: $breakpoint-md) {
+        width: 90vw;
+        max-height: 70vh;
+        height: fit-content;
+        min-height: 25vh;
+        top: 120px;
+    }
 }
 
 #search_container {
-  display: none;
-  width: 100%;
-  grid-template-columns: 30% 68%;
-
-  @media (max-width: $breakpoint-md) {
-    overflow-x: hidden;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-template-rows: auto;
-    grid-template-areas:
-      "sidebar sidebar"
-      "result result";
-  }
-
+    display: none;
+    width: 100%;
+    grid-template-columns: 30% 68%;
+    @media (max-width: $breakpoint-md) {
+        overflow-x: hidden;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-template-rows: auto;
+        grid-template-areas: "sidebar sidebar" "result result";
+    }
 }
 
 #search-overlay {
-  position: fixed;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.25);
-  width: 100vw;
-  height: 100vh;
-  content: "";
-  z-index: 998;
-  display: none;
-
-  &.search-overlay__toggle {
-    display: block;
-  }
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.25);
+    width: 100vw;
+    height: 100vh;
+    content: "";
+    z-index: 998;
+    display: none;
+    &.search-overlay__toggle {
+        display: block;
+    }
 }
-
 
 .ais-RefinementList {
-  &-list {
-    list-style: none;
-    padding: 0px;
-    margin-top: 0px;
-
-    @media (max-width: $breakpoint-md) {
-      display: grid;
-      grid-template-columns: auto auto auto;
-      gap: 10px;
+    &-list {
+        list-style: none;
+        padding: 0px;
+        margin-top: 0px;
+        @media (max-width: $breakpoint-md) {
+            display: grid;
+            grid-template-columns: auto auto auto;
+            gap: 10px;
+        }
+        .ais-RefinementList-label {
+            font-size: 13px;
+        }
+        input {
+            margin-right: 5px;
+        }
     }
-
-    .ais-RefinementList-label {
-      font-size: 13px;
+    &-label {
+        display: flex;
+        align-items: center;
     }
-
-    input {
-      margin-right: 5px;
+    &-count {
+        background: #f5f5fa none repeat scroll 0 0;
+        border: 1px solid #b6b7d5;
+        border-radius: 99999px;
+        color: #23263b;
+        display: inline-flex;
+        -ms-flex-negative: 0;
+        flex-shrink: 0;
+        font-size: .75rem;
+        font-weight: 400;
+        line-height: 1rem;
+        margin-left: 0.5rem;
+        overflow: hidden;
+        padding: 0 0.25rem;
     }
-  }
-
-  &-label {
-    display: flex;
-    align-items: center;
-  }
-
-  &-count {
-    background: #f5f5fa none repeat scroll 0 0;
-    border: 1px solid #b6b7d5;
-    border-radius: 99999px;
-    color: #23263b;
-    display: inline-flex;
-    -ms-flex-negative: 0;
-    flex-shrink: 0;
-    font-size: .75rem;
-    font-weight: 400;
-    line-height: 1rem;
-    margin-left: 0.5rem;
-    overflow: hidden;
-    padding: 0 0.25rem;
-  }
 }
 
-
 .ais-SearchBox-submit {
-  background: transparent;
-  height: 32px;
-  border: 0px;
-  height: 36px;
-  position: absolute;
-  left: 0.5rem;
-
-  .ais-SearchBox-submitIcon {
-    width: 14px;
-    height: 14px;
-  }
+    background: transparent;
+    height: 32px;
+    border: 0px;
+    height: 36px;
+    position: absolute;
+    left: 0.5rem;
+    .ais-SearchBox-submitIcon {
+        width: 14px;
+        height: 14px;
+    }
 }
 
 .ais-SearchBox-loadingIndicator {
-  right: 10px;
-  position: absolute;
-  top: 9px;
-  margin: auto;
-
-  svg {
-    width: 20px;
-    height: 20px;
-  }
+    right: 10px;
+    position: absolute;
+    top: 9px;
+    margin: auto;
+    svg {
+        width: 20px;
+        height: 20px;
+    }
 }
 
 .ais-Pagination {
-  margin: 2rem 0.5rem;
-  text-align: center;
-
-  &-list {
-    display: flex;
-    align-items: center;
-    margin: 0px;
-    padding: 0px;
-
-    li {
-      list-style: none;
-      display: inline-block;
-      margin-left: -1px;
+    margin: 2rem 0.5rem;
+    text-align: center;
+    &-list {
+        display: flex;
+        align-items: center;
+        margin: 0px;
+        padding: 0px;
+        li {
+            list-style: none;
+            display: inline-block;
+            margin-left: -1px;
+        }
     }
-  }
-
-  &-link {
-    appearance: none;
-    background-color: #fff;
-    background-image: linear-gradient(-180deg, #fff, #fcfcfd);
-    border: 1px solid #d6d6e7;
-    border-radius: 3px;
-    color: #23263b;
-    cursor: pointer;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    font-size: .875rem;
-    font-weight: 400;
-    height: 2rem;
-    justify-content: center;
-    line-height: 1.25rem;
-    padding: 0 1rem;
-    place-items: center;
-    text-decoration: none;
-    margin-left: -1px;
-
-    @media (max-width: $breakpoint-md) {
-      padding: 0 calc(1rem - 1.5vw);
-
+    &-link {
+        appearance: none;
+        background-color: #fff;
+        background-image: linear-gradient(-180deg, #fff, #fcfcfd);
+        border: 1px solid #d6d6e7;
+        border-radius: 3px;
+        color: #23263b;
+        cursor: pointer;
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
+        display: inline-flex;
+        font-size: .875rem;
+        font-weight: 400;
+        height: 2rem;
+        justify-content: center;
+        line-height: 1.25rem;
+        padding: 0 1rem;
+        place-items: center;
+        text-decoration: none;
+        margin-left: -1px;
+        @media (max-width: $breakpoint-md) {
+            padding: 0 calc(1rem - 1.5vw);
+        }
     }
-
-  }
-
-  &-item {
-    &--selected {
-      .ais-Pagination-link {
-        font-weight: 700;
-        border-color: #d6d6e7;
+    &-item {
+        &--selected {
+            .ais-Pagination-link {
+                font-weight: 700;
+                border-color: #d6d6e7;
+                cursor: not-allowed;
+            }
+        }
+    }
+    &-VoiceSearch-button:disabled,
+    [class^=ais-][class$="--disabled"],
+    [class^=ais-][class$="--disabled"] * {
         cursor: not-allowed;
-      }
     }
-  }
-
-  &-VoiceSearch-button:disabled,
-  [class^=ais-][class$="--disabled"],
-  [class^=ais-][class$="--disabled"] * {
-    cursor: not-allowed;
-  }
 }
 
 #algolia-results {
-  display: block;
-  max-height: calc(60vh - 95px);
-  overflow-y: auto;
-  padding-right: 15px;
-
-  &::-webkit-scrollbar {
-    width: 5px;
-    height: 8px;
-    background-color: #aaa;
-    /* or add it to the track */
-    border-radius: 8px;
-  }
-
-  /* Add a thumb */
-  &::-webkit-scrollbar-thumb {
-    background: #000;
-    border-radius: 6px;
-  }
-
-  @media (max-width: $breakpoint-md) {
-    max-height: calc(53vh - 95px);
-
-  }
+    display: block;
+    max-height: calc(60vh - 95px);
+    overflow-y: auto;
+    padding-right: 15px;
+    &::-webkit-scrollbar {
+        width: 5px;
+        height: 8px;
+        background-color: #aaa;
+        /* or add it to the track */
+        border-radius: 8px;
+    }
+    /* Add a thumb */
+    &::-webkit-scrollbar-thumb {
+        background: #000;
+        border-radius: 6px;
+    }
+    @media (max-width: $breakpoint-md) {
+        max-height: calc(53vh - 95px);
+    }
 }
 
 .ais-SearchBox-reset {
-  display: none;
+    display: none;
 }
 
 .search-panel__results {
-  padding-top: 10px;
-
-  @media (max-width: $breakpoint-md) {
-    grid-area: result;
-    margin-top: 12vh;
-    padding-top: 0px;
-  }
+    padding-top: 10px;
+    @media (max-width: $breakpoint-md) {
+        grid-area: result;
+        margin-top: 12vh;
+        padding-top: 0px;
+    }
 }
 
 #algolia-search {
-  max-width: 80vw;
-  margin: 0.5vw 1vw;
-
-  @media (max-width: $breakpoint-md) {
-    max-width: 97vw;
-
-  }
+    max-width: 80vw;
+    margin: 0.5vw 1vw;
+    @media (max-width: $breakpoint-md) {
+        max-width: 97vw;
+    }
 }
 
 .ais-Hits-list {
-  list-style: none;
-  padding: 0px;
-  margin: 0px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-
-  li {
-    box-shadow: 0 0 0px #94a3b8;
-    border-radius: 0.5rem;
-    padding: 10px;
-
-    a {
-      color: #343434;
-      font-size: 13px;
-      text-decoration: none;
-    }
-
-    .post-snippet {
-      p {
-        display: -webkit-box;
-        max-width: 100%;
-        max-height: 41px;
-        margin: 0 auto;
-        font-size: 12px;
-        line-height: 1.2rem;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        color: #737373;
-      }
-    }
-
-    &:hover {
-      background: $lightgrey;
-
-      a {
-        color: #5A5A5A;
-
-        p {
-          color: #5A5A5A;
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    li {
+        box-shadow: 0 0 0px #94a3b8;
+        border-radius: 0.5rem;
+        padding: 10px;
+        a {
+            color: #343434;
+            font-size: 13px;
+            text-decoration: none;
         }
-      }
+        .post-title-container {
+            display: flex;
+            flex-direction: row;
+            justify-content: start;
+            align-items: center;
+        }
+        .post-collection {
+            border-radius: 3px;
+            padding: 2px 5px;
+            margin-left: 5px;
+            background: rgba(152, 210, 220, .3);
+        }
+        .post-snippet {
+            p {
+                display: -webkit-box;
+                max-width: 100%;
+                max-height: 41px;
+                margin: 0 auto;
+                font-size: 12px;
+                line-height: 1.2rem;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                color: #737373;
+            }
+        }
+        &:hover {
+            background: $lightgrey;
+            a {
+                color: #5A5A5A;
+                p {
+                    color: #5A5A5A;
+                }
+            }
+        }
     }
-  }
 }
