--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -55,6 +55,9 @@
         &:hover {
             text-decoration: none;
         }
+        @media (max-width: $breakpoint-md) {
+            margin-right: 0px;
+        }
     }
     &__menu {
         display: flex;
