--- a/_scss/_cardsection.scss
+++ b/_scss/_cardsection.scss
@@ -21,6 +21,8 @@
 .cardSectionParagraphGuides {
   font-size: 14px;
   width:65%;
+  line-height: 1.5;
+  color:#262626;
 }
 
 .cardSectionParagraphSpacer {
