--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -3,7 +3,7 @@
   &__container {
 
     width: 100%;
-    height: var(--header-height);
+    height: 100%;
 
     &__inner {
       padding-left: $container-padding;
