--- a/_scss/_anchorlist.scss
+++ b/_scss/_anchorlist.scss
@@ -3,23 +3,29 @@
     padding-left: 0;
     list-style-type: none;
     border-left: 1px solid $babyblue;
-    >.anchorlist__item>a {
+
+    > .anchorlist__item > a {
       padding-left: $container-padding;
+      margin-bottom: 10px; /* Add space between line items */
     }
   }
   &__submenu {
     padding-left: 0;
     list-style-type: none;
-    >.anchorlist__item>a {
+
+    > .anchorlist__item > a {
       padding-left: $container-padding + $container-padding;
+      margin-bottom: 12px; /* Add space between line items */
     }
-    >.anchorlist__item .anchorlist__item a {
+    > .anchorlist__item .anchorlist__item a {
       padding-left: $container-padding + $container-padding + $container-padding;
+      margin-bottom: 10px; /* Add space between line items */
     }
   }
   &__item {
-    line-height: 1.5;
-    
+    line-height: 1.25;
+    font-size: 1.2rem;
+
     &__active {
       border-left: 2px solid $babyblue;
       color: $active-color;
